Now goes straight to canvas. Saves to dropbox. Sizes from innerHeight.

--- a/app/index.html
+++ b/app/index.html
@@ -22,8 +22,10 @@
     </div>
   </script>
   <script id="canvas-template" type="text/x-handlebars-template">
-    <canvas class="Absolute-Center is-Fixed rotate-with-screen"></canvas>
+    <canvas class="drawing-surface Absolute-Center is-Fixed rotate-with-screen"></canvas>
   </script>
+
+  <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="1b835w0tez1pwkr"></script>
 
   <script src="./lib/jquery-2.1.1.min.js"></script>
   <script src="./lib/handlebars-v1.3.0.js"></script>
@@ -31,7 +33,6 @@
   <script src="./lib/backbone-min.js"></script>
   <script src="./lib/three.js"></script>
   <script src="./engines/orientation.js"></script>
-  <script src="./pages/menu.js"></script>
   <script src="./pages/canvas.js"></script>
   <script src="./router/router.js"></script>
 
