--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
   <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="1b835w0tez1pwkr"></script>
 
   <script src="./lib/jquery-2.1.1.min.js"></script>
+  <script src="./lib/jquery.canvasrotate.js"></script>
   <script src="./lib/handlebars-v1.3.0.js"></script>
   <script src="./lib/underscore-min.js"></script>
   <script src="./lib/backbone-min.js"></script>
